--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tabler/icons-vue": "^3.31.0",
     "@tailwindcss/vite": "^4.1.5",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.1.5",
