--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "pinia": "^3.0.1",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.51.1",
